--- a/src/htmltests/IconBoardTester.html
+++ b/src/htmltests/IconBoardTester.html
@@ -12,6 +12,7 @@
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
 <script type="text/javascript" src=".././glift.js"></script>
+<script type="text/javascript" src=".././global.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="../util/util.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
@@ -61,10 +62,12 @@
 <script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
 <script type="text/javascript" src="../displays/icons/svg.js"></script>
 <script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
+<!-- Displays diagrams -->
+<script type="text/javascript" src="../displays/diagrams/diagrams.js"></script>
+<script type="text/javascript" src="../displays/diagrams/gooe.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
-<script type="text/javascript" src="../rules/intersections.js"></script>
 <script type="text/javascript" src="../rules/movenode.js"></script>
 <script type="text/javascript" src="../rules/movetree.js"></script>
 <script type="text/javascript" src="../rules/problems.js"></script>
@@ -83,6 +86,8 @@
 <!-- Bridge -->
 <script type="text/javascript" src="../bridge/bridge.js"></script>
 <script type="text/javascript" src="../bridge/cropping.js"></script>
+<script type="text/javascript" src="../bridge/flattener.js"></script>
+<script type="text/javascript" src="../bridge/intersections.js"></script>
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
