--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -33,6 +33,7 @@
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
 <script type="text/javascript" src=".././glift.js"></script>
+<script type="text/javascript" src=".././global.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="../util/util.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
@@ -82,10 +83,12 @@
 <script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
 <script type="text/javascript" src="../displays/icons/svg.js"></script>
 <script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
+<!-- Displays diagrams -->
+<script type="text/javascript" src="../displays/diagrams/diagrams.js"></script>
+<script type="text/javascript" src="../displays/diagrams/gooe.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
-<script type="text/javascript" src="../rules/intersections.js"></script>
 <script type="text/javascript" src="../rules/movenode.js"></script>
 <script type="text/javascript" src="../rules/movetree.js"></script>
 <script type="text/javascript" src="../rules/problems.js"></script>
@@ -104,6 +107,8 @@
 <!-- Bridge -->
 <script type="text/javascript" src="../bridge/bridge.js"></script>
 <script type="text/javascript" src="../bridge/cropping.js"></script>
+<script type="text/javascript" src="../bridge/flattener.js"></script>
+<script type="text/javascript" src="../bridge/intersections.js"></script>
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/base_widget.js"></script>
@@ -140,7 +145,6 @@
 <script type="text/javascript" src="../displays/icons/wrapped_icon_test.js"></script>
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/goban_test.js"></script>
-<script type="text/javascript" src="../rules/intersections_test.js"></script>
 <script type="text/javascript" src="../rules/movenode_test.js"></script>
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/problems_test.js"></script>
@@ -155,6 +159,8 @@
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
+<script type="text/javascript" src="../bridge/flattener_test.js"></script>
+<script type="text/javascript" src="../bridge/intersections_test.js"></script>
 <!-- Widgets Tests -->
 <script type="text/javascript" src="../widgets/widgets_test.js"></script>
 
@@ -183,7 +189,6 @@ $(document).ready(function() {
   glift.rules.movetreeTest();
   glift.rules.movenodeTest();
   glift.rules.treepathTest();
-  glift.rules.intersectionsTest();
   glift.rules.gobanTest();
   glift.rules.propertiesTest();
   glift.rules.problemsTest();
@@ -201,6 +206,8 @@ $(document).ready(function() {
 
   // Display + Rules bridge tests
   glift.bridge.croppingTest();
+  glift.bridge.intersectionsTest();
+  glift.bridge.flattenerTest();
 
   // And finally: an end to end test!
   glift.widgets.widgetsTest();
