--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -101,13 +101,12 @@
 <!-- Widgets options -->
 <script type="text/javascript" src="../widgets/options/options.js"></script>
 <script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
 <script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
 <script type="text/javascript" src="../widgets/options/example_options.js"></script>
 <script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
 <script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
 <script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
-<!-- Widgets options board_editor -->
-<script type="text/javascript" src="../widgets/options/board_editor/board_editor.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
     <style>
@@ -132,7 +131,8 @@
           glift.global.performanceDebugLevel = 'INFO';
           gameViewer = glift.create({
             sgf: {
-              sgfString: testdata.gogameguru_commentary
+              sgfString: testdata.gogameguru_commentary,
+              rotation: 'CLOCKWISE_270'
             },
             theme: 'DEPTH',
             goBoardBackground: '../themes/assets/bambootile_warm.jpg',
