--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -79,6 +79,7 @@
 <script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
 <script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
 <script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
+<script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
 <!-- Displays position -->
 <script type="text/javascript" src="../displays/position/position.js"></script>
 <script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
