--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -4,6 +4,7 @@
 
 <title> GameViewerTester </title>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
+<script type="text/javascript" src="../testdata/treppen.js"></script>
 <script type="text/javascript" src="../testdata/gogameguru_commentary.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
@@ -80,6 +81,7 @@
 <script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
 <script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
 <script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
+<script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
 <!-- Displays position -->
 <script type="text/javascript" src="../displays/position/position.js"></script>
 <script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
@@ -160,8 +162,8 @@
           gameViewer = glift.create({
             divId: 'glift_display1',
             sgf: {
-              sgfString: testdata.gogameguru_commentary,
-              //sgfString: testdata.sgfs.leeGuGame6,
+              //sgfString: testdata.treppen,
+              sgfString: testdata.sgfs.leeGuGame6,
               rotation: 'CLOCKWISE_270'
             },
             display: {
