--- a/src/htmltests/KogosTester.html
+++ b/src/htmltests/KogosTester.html
@@ -117,6 +117,7 @@
 <script type="text/javascript" src="../bridge/bridge.js"></script>
 <script type="text/javascript" src="../bridge/cropping.js"></script>
 <script type="text/javascript" src="../bridge/intersections.js"></script>
+<script type="text/javascript" src="../bridge/rotate.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
 <script type="text/javascript" src="../flattener/board.js"></script>
