--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -140,6 +140,7 @@
 <script type="text/javascript" src="../bridge/bridge.js"></script>
 <script type="text/javascript" src="../bridge/cropping.js"></script>
 <script type="text/javascript" src="../bridge/intersections.js"></script>
+<script type="text/javascript" src="../bridge/rotate.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
 <script type="text/javascript" src="../flattener/board.js"></script>
@@ -216,6 +217,7 @@
 <!-- Bridge Tests -->
 <script type="text/javascript" src="../bridge/cropping_test.js"></script>
 <script type="text/javascript" src="../bridge/intersections_test.js"></script>
+<script type="text/javascript" src="../bridge/rotate_test.js"></script>
 <!-- Flattener Tests -->
 <script type="text/javascript" src="../flattener/board_test.js"></script>
 <script type="text/javascript" src="../flattener/flattener_test.js"></script>
