--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -112,9 +112,11 @@
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
 <!-- Bridge -->
 <script type="text/javascript" src="../bridge/bridge.js"></script>
-<script type="text/javascript" src="../bridge/cropping.js"></script>
 <script type="text/javascript" src="../bridge/intersections.js"></script>
-<script type="text/javascript" src="../bridge/rotate.js"></script>
+<!-- Orientation -->
+<script type="text/javascript" src="../orientation/orientation.js"></script>
+<script type="text/javascript" src="../orientation/cropping.js"></script>
+<script type="text/javascript" src="../orientation/rotate.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
 <script type="text/javascript" src="../flattener/board.js"></script>
