--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -137,9 +137,11 @@
 <script type="text/javascript" src="../controllers/static_problem.js"></script>
 <!-- Bridge -->
 <script type="text/javascript" src="../bridge/bridge.js"></script>
-<script type="text/javascript" src="../bridge/cropping.js"></script>
 <script type="text/javascript" src="../bridge/intersections.js"></script>
-<script type="text/javascript" src="../bridge/rotate.js"></script>
+<!-- Orientation -->
+<script type="text/javascript" src="../orientation/orientation.js"></script>
+<script type="text/javascript" src="../orientation/cropping.js"></script>
+<script type="text/javascript" src="../orientation/rotate.js"></script>
 <!-- Flattener -->
 <script type="text/javascript" src="../flattener/flattener.js"></script>
 <script type="text/javascript" src="../flattener/board.js"></script>
@@ -214,9 +216,10 @@
 <script type="text/javascript" src="../controllers/game_viewer_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
 <!-- Bridge Tests -->
-<script type="text/javascript" src="../bridge/cropping_test.js"></script>
 <script type="text/javascript" src="../bridge/intersections_test.js"></script>
-<script type="text/javascript" src="../bridge/rotate_test.js"></script>
+<!-- Orientation Tests -->
+<script type="text/javascript" src="../orientation/cropping_test.js"></script>
+<script type="text/javascript" src="../orientation/rotate_test.js"></script>
 <!-- Flattener Tests -->
 <script type="text/javascript" src="../flattener/board_test.js"></script>
 <script type="text/javascript" src="../flattener/flattener_test.js"></script>
