Widget wasn't rendering because of no height, fix with css

--- a/src/htmltests/BaseWidgetTest.html
+++ b/src/htmltests/BaseWidgetTest.html
@@ -147,6 +147,9 @@
         margin: 0;
         padding: 0;
       }
+      html, body, #wrap {
+        height: 100%;
+      }
       #glift_display1 {
         height:100%;
         position:relative;
