--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -7,139 +7,8 @@
 <script type="text/javascript" src="../libs/raphael-min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
-<!-- Otre -->
-<script type="text/javascript" src=".././glift.js"></script>
-<script type="text/javascript" src=".././global.js"></script>
-<script type="text/javascript" src=".././init.js"></script>
-<!-- Util -->
-<script type="text/javascript" src="../util/util.js"></script>
-<script type="text/javascript" src="../util/array.js"></script>
-<script type="text/javascript" src="../util/colors.js"></script>
-<script type="text/javascript" src="../util/enums.js"></script>
-<script type="text/javascript" src="../util/errors.js"></script>
-<script type="text/javascript" src="../util/id_generator.js"></script>
-<script type="text/javascript" src="../util/key_mappings.js"></script>
-<script type="text/javascript" src="../util/math.js"></script>
-<script type="text/javascript" src="../util/obj.js"></script>
-<script type="text/javascript" src="../util/performance.js"></script>
-<script type="text/javascript" src="../util/platform.js"></script>
-<script type="text/javascript" src="../util/point.js"></script>
-<script type="text/javascript" src="../util/regions.js"></script>
-<script type="text/javascript" src="../util/test_util.js"></script>
-<!-- Dom -->
-<script type="text/javascript" src="../dom/dom.js"></script>
-<script type="text/javascript" src="../dom/classes.js"></script>
-<script type="text/javascript" src="../dom/sanitize.js"></script>
-<script type="text/javascript" src="../dom/ux.js"></script>
-<!-- Ajax -->
-<script type="text/javascript" src="../ajax/ajax.js"></script>
-<!-- Themes -->
-<script type="text/javascript" src="../themes/themes.js"></script>
-<script type="text/javascript" src="../themes/colorful.js"></script>
-<script type="text/javascript" src="../themes/default.js"></script>
-<script type="text/javascript" src="../themes/depth.js"></script>
-<script type="text/javascript" src="../themes/moody.js"></script>
-<script type="text/javascript" src="../themes/textbook.js"></script>
-<script type="text/javascript" src="../themes/transparent.js"></script>
-<!-- Markdown -->
-<script type="text/javascript" src="../markdown/markdown.js"></script>
-<script type="text/javascript" src="../markdown/marked.js"></script>
-<!-- Displays -->
-<script type="text/javascript" src="../displays/displays.js"></script>
-<script type="text/javascript" src="../displays/bbox.js"></script>
-<script type="text/javascript" src="../displays/board_points.js"></script>
-<script type="text/javascript" src="../displays/cropbox_wrapper.js"></script>
-<script type="text/javascript" src="../displays/environment.js"></script>
-<script type="text/javascript" src="../displays/ids.js"></script>
-<script type="text/javascript" src="../displays/line_box.js"></script>
-<script type="text/javascript" src="../displays/resized_box.js"></script>
-<!-- Displays board -->
-<script type="text/javascript" src="../displays/board/board.js"></script>
-<script type="text/javascript" src="../displays/board/board_base.js"></script>
-<script type="text/javascript" src="../displays/board/board_labels.js"></script>
-<script type="text/javascript" src="../displays/board/buttons.js"></script>
-<script type="text/javascript" src="../displays/board/intersections.js"></script>
-<script type="text/javascript" src="../displays/board/lines.js"></script>
-<script type="text/javascript" src="../displays/board/marks.js"></script>
-<script type="text/javascript" src="../displays/board/starpoints.js"></script>
-<script type="text/javascript" src="../displays/board/stones.js"></script>
-<!-- Displays commentbox -->
-<script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
-<script type="text/javascript" src="../displays/commentbox/create.js"></script>
-<!-- Displays gui -->
-<script type="text/javascript" src="../displays/gui/gui.js"></script>
-<script type="text/javascript" src="../displays/gui/center.js"></script>
-<!-- Displays icons -->
-<script type="text/javascript" src="../displays/icons/icons.js"></script>
-<script type="text/javascript" src="../displays/icons/bar.js"></script>
-<script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
-<script type="text/javascript" src="../displays/icons/icon_selector.js"></script>
-<script type="text/javascript" src="../displays/icons/svg.js"></script>
-<script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
-<!-- Displays svg -->
-<script type="text/javascript" src="../displays/svg/svg.js"></script>
-<script type="text/javascript" src="../displays/svg/pathutils.js"></script>
-<script type="text/javascript" src="../displays/svg/svgobj.js"></script>
-<!-- Displays statusbar -->
-<script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
-<script type="text/javascript" src="../displays/statusbar/fullscreen.js"></script>
-<script type="text/javascript" src="../displays/statusbar/gameinfo.js"></script>
-<script type="text/javascript" src="../displays/statusbar/info_window.js"></script>
-<!-- Displays position -->
-<script type="text/javascript" src="../displays/position/position.js"></script>
-<script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
-<script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
-<!-- Rules -->
-<script type="text/javascript" src="../rules/rules.js"></script>
-<script type="text/javascript" src="../rules/autonumber.js"></script>
-<script type="text/javascript" src="../rules/goban.js"></script>
-<script type="text/javascript" src="../rules/movenode.js"></script>
-<script type="text/javascript" src="../rules/movetree.js"></script>
-<script type="text/javascript" src="../rules/problems.js"></script>
-<script type="text/javascript" src="../rules/properties.js"></script>
-<script type="text/javascript" src="../rules/treepath.js"></script>
-<!-- Sgf -->
-<script type="text/javascript" src="../sgf/sgf.js"></script>
-<!-- Parse -->
-<script type="text/javascript" src="../parse/parse.js"></script>
-<script type="text/javascript" src="../parse/pandanet.js"></script>
-<script type="text/javascript" src="../parse/sgf_parser.js"></script>
-<script type="text/javascript" src="../parse/tygem.js"></script>
-<!-- Controllers -->
-<script type="text/javascript" src="../controllers/controllers.js"></script>
-<script type="text/javascript" src="../controllers/base.js"></script>
-<script type="text/javascript" src="../controllers/board_editor.js"></script>
-<script type="text/javascript" src="../controllers/game_viewer.js"></script>
-<script type="text/javascript" src="../controllers/static_problem.js"></script>
-<!-- Bridge -->
-<script type="text/javascript" src="../bridge/bridge.js"></script>
-<script type="text/javascript" src="../bridge/intersections.js"></script>
-<!-- Orientation -->
-<script type="text/javascript" src="../orientation/orientation.js"></script>
-<script type="text/javascript" src="../orientation/cropbox.js"></script>
-<script type="text/javascript" src="../orientation/cropping.js"></script>
-<script type="text/javascript" src="../orientation/min_bbox.js"></script>
-<script type="text/javascript" src="../orientation/rotate.js"></script>
-<!-- Flattener -->
-<script type="text/javascript" src="../flattener/flattener.js"></script>
-<script type="text/javascript" src="../flattener/board.js"></script>
-<script type="text/javascript" src="../flattener/flattened.js"></script>
-<script type="text/javascript" src="../flattener/intersection.js"></script>
-<script type="text/javascript" src="../flattener/symbols.js"></script>
-<!-- Widgets -->
-<script type="text/javascript" src="../widgets/widgets.js"></script>
-<script type="text/javascript" src="../widgets/base_widget.js"></script>
-<script type="text/javascript" src="../widgets/manager.js"></script>
-<!-- Widgets options -->
-<script type="text/javascript" src="../widgets/options/options.js"></script>
-<script type="text/javascript" src="../widgets/options/base_options.js"></script>
-<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
-<script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
-<script type="text/javascript" src="../widgets/options/example_options.js"></script>
-<script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
-<script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
-<script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
-
+<!-- compiled sources -->
+<script type="text/javascript" src="../compiled/glift_combined.js"></script>
 <!-- END-AUTO-GEN-DEPS -->
 
 <body>
