--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -160,6 +160,9 @@
         margin: 10px;
         padding: 10px;
       }
+      #gheader {
+        position:relative;
+      }
     </style>
   </head>
 
