--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -29,6 +29,7 @@
 <script type="text/javascript" src="../dom/dom.js"></script>
 <script type="text/javascript" src="../dom/sanitize.js"></script>
 <script type="text/javascript" src="../dom/ux.js"></script>
+<script type="text/javascript" src="../dom/wheel.js"></script>
 <!-- ajax sources -->
 <script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- themes sources -->
